<resources>
    <string name="app_name">APP-AEM</string>
    <string name="email">appaem@gmail.com</string>
    <string name="app_name_ext">Pre-Analisys of Electrical Machines</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Menu -->
    <!-- Header -->
    <string name="menu_header_title">Pré-Analysis of Electrical Machines</string>
    <string name="menu_header_description">appaem@gmail.com</string>
    <!-- Options -->
    <string name="induction_motor">Induction Motor</string>
    <string name="motors_list">List</string>
    <string name="add_new">Add New</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>List</item>
        <item>Add New</item>
        <item>Settings</item>
    </string-array>

    <string name="induction_motor_title"><u>Induction Motor</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="hello_blank_fragment4">Hello blank fragment4</string>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="from_circuit">From Circuit</string>
    <string name="from_tests">From Tests</string>
    <string name="from_catalog">From Catalog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
